--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <link href="style.css" />
     <title>Title</title>
-    <script type="text/javascript" src="pixi.min.js"></script>
-    <script type="text/javascript" src="matter.min.js"></script>
-    <script type="text/javascript" src="pixi-layers.min.js"></script>
+    <script type="text/javascript" src="js/libs/pixi.min.js"></script>
+    <script type="text/javascript" src="js/libs/matter.min.js"></script>
+    <script type="text/javascript" src="js/libs/pixi-layers.min.js"></script>
 </head>
 <body style="background: darkgrey">
 </body>
-<script src="main.js"></script>
+<script type="module" src="js/main.js"></script>
 </html>
