--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Title</title>
     <script type="text/javascript" src="js/libs/pixi.min.js"></script>
     <script type="text/javascript" src="js/libs/matter.min.js"></script>
     <script type="text/javascript" src="js/libs/pixi-layers.min.js"></script>
+    <script type="text/javascript" src="js/libs/pixi-sound.js"></script>
 </head>
 <body style="background: darkgrey">
 </body>
