--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/libs/pixi-sound.js"></script>
 </head>
 <body style="background: darkgrey">
+    <div class="loadFont">0</div>
 </body>
 <script type="module" src="js/main.js"></script>
 </html>
