--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="js/libs/matter.min.js"></script>
     <script type="text/javascript" src="js/libs/pixi-layers.min.js"></script>
     <script type="text/javascript" src="js/libs/pixi-sound.js"></script>
+    <script src="https://vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>
 </head>
 <body style="background: darkgrey">
     <div class="loadFont">0</div>
